--- a/index.html
+++ b/index.html
@@ -24,26 +24,48 @@
     
    </div>
 
-    <div class="informacionGeneralProd">
-        <h2>Nuestras opciones de cafetería</h2>
-        <div class="imagensProductos">
-            <div>
-                <img src="imagenes/754934523_232288662_1706x960.webp" alt="">
-                <p>Galletas de Temporada</p>
+    <div class="slider">
+        <h2>Otras opciones de cafeteria</h2>
+        <div class="list">
+            <div class="item">
+                <img src="imagenes/1.jpg" alt="">
+                <h3>Donas</h3>
+                <p>
+                    ¡Directo al antojo! Nuestras donas son explosiones de sabor: glaseados brillantes como joyas, rellenos cremosos y texturas suaves que se derriten en tu boca. 
+                    ¡Cada mordisco es una fiesta! Desde la clásica dulzura hasta combinaciones audaces y divertidas, tenemos la dona perfecta para cada capricho. ¡Ven y déjate 
+                    tentar por la felicidad redonda!
+                </p>
                 <button>Ordenar</button>
             </div>
-            <div>
-                <img src="imagenes/615c92f205dc40ee9e6189b7_WhatsApp Image 2021-10-05 at 12.00.47.jpeg" alt="">
-                <p>Brownies Signature</p>
+            <div class="item">
+                <img src="imagenes/3.jpeg" alt="">
+                <h3>Brownies</h3>
+                <p>
+                    El brownie perfecto era una leyenda en la repostería. Se decía que tenía la corteza ligeramente crujiente, como un susurro dulce antes de la sorpresa. 
+                    Al morder, revelaba un interior denso y húmedo, casi como un volcán de chocolate fundido en cámara lenta.
+                </p>
                 <button>Ordenar</button>
             </div>
-            <div>
-                <img src="imagenes/4puqndeoH_1256x620__2.jpg" alt="">
-                <p>Donas</p>
+            <div class="item">
+                <img src="imagenes/4.jpeg" alt="">
+                <h3>Galletas de temporada</h3>
+                <p>La galleta de temporada era un lienzo comestible que cambiaba con el ritmo del año. En primavera, presumía una delicada fragancia cítrica,
+                     como un campo de limoneros en flor, y sus pepitas de amapola crujían sutilmente, evocando el despertar de la naturaleza. Su dulzura era ligera y refrescante, como la primera brisa cálida.
+                </p>
                 <button>Ordenar</button>
-            </div> 
+            </div>
         </div>
+            <div class="buttons">
+        <button id="prev"><</button>
+        <button id="next">></button>
     </div>
+        <ul class="dots">
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <script src="Js/Slider.js"></script>
 
     <div class="fraseLocal">
         <div>
